Prevent icon overflow

--- a/src/assets/sass/pages/_games.scss
+++ b/src/assets/sass/pages/_games.scss
@@ -27,6 +27,16 @@
     height:100%;    
 }
 
+.games-grid-game__icon{
+    width:100%;
+    height:100%;
+    overflow: hidden;
+
+    img{
+        max-width: 100%;
+    }
+}
+
 .games-grid-game__highlight{
     padding:15px;
     background-color:#14334a;
